Added symbol endpoints to currency controller
